--- a/src/assets/scss/core/_variables.scss
+++ b/src/assets/scss/core/_variables.scss
@@ -8,5 +8,5 @@ $bg_color_input:#fafaf8;
 $color_white:#fdfdfc;
 $color_placeholder:#c2c2c1;
 $color_font_1:#141414;
-$color_font_2:#a3a3a3;
+$color_font_2:#d8d8d8;
 $category_active:#f3fbf7;
