--- a/src/assets/scss/components/_components.scss
+++ b/src/assets/scss/components/_components.scss
@@ -1,3 +1,6 @@
+a {
+    text-decoration: none;
+}
 input.search {
     padding: 10px 15px;
     height: 42px;
@@ -18,12 +21,24 @@ button {
 }
 input[type="search"] {
     width: 100%;
-    height: 35px;
+    height: 42px;
     border: 0px;
     border-radius: 15px;
     background-color: #fafaf8;
     color: $color_font_1;
     padding: 15px 30px;
+}
+input {
+    padding: 10px 15px;
+    height: 42px;
+    border-radius: 20px;
+    background-color: $bg_color_input;
+    border: none;
+    &:focus-visible,
+    :focus {
+        border: 1px solid #f7b500;
+        outline: 0px;
+    }
 }
 ::placeholder {
     color: #bbbbb9;
@@ -50,6 +65,7 @@ svg {
 }
 
 .basket {
+    position: relative;
     color: $icon_color;
     background-color: $bg_color_box;
     width: 65px;
@@ -57,6 +73,16 @@ svg {
     border-radius: 15px;
     flex-grow: unset;
     @include flex;
+    span.notification {
+        color: #fff;
+        background-color: $bg_color_notif;
+        border-radius: 10px;
+        position: absolute;
+        top: -10px;
+        right: -5px;
+        font-size: 0.85em;
+        padding: 0.1em 0.4em;
+    }
 }
 .avatar {
     background-color: $icon_color;
